ssme stack adapter

--- a/GameData/RocketMotorMenagerie/Parts/rmm_cotopaxi.cfg
+++ b/GameData/RocketMotorMenagerie/Parts/rmm_cotopaxi.cfg
@@ -29,11 +29,11 @@ PART
     subcategory  = 0
     title        = RM-25-69 'Cotopaxi' Cryogenic Rocket Engine
     manufacturer = Cassiopeia Propulsion Systems
-    description  = RS-25 SSME
+    description  = SSME
 
     tags = propuls rocket sustain hydrogen hydrolox cryo rs25 ssme transportation rm? menagerie cassiopeia ?25 shuttle sts 69
 
-    mass = 2.02
+    mass = 1.2
 
     dragModelType  = default
     maximum_drag   = 0.20
@@ -294,6 +294,62 @@ PART
 		{
 			targetName = actuatorB
 			rotatorsName = pistonB
+		}
+	}
+    MODULE
+	{
+		name = ModuleB9PartSwitch
+		moduleID = meshSwitch
+		switcherDescription = Engine Mount
+		switcherDescriptionPlural = Engine Mounts
+		affectDragCubes = True
+		affectFARVoxels = True
+		SUBTYPE
+		{
+			name = 1.875m Mount
+            primaryColor=#5a5a5a
+			secondaryColor=#2b2b2b
+            transform = 1875attach
+            defaultSubtypePriority = 4
+            descriptionSummary = 1.875m Stack Mount
+            descriptionDetail = A standard size mount.
+            NODE
+			{
+				name = top
+				position = 0.0, 1.45, 0.0
+                size = 2
+			}
+		}
+        SUBTYPE
+		{
+			name = 2.5m Mount
+            primaryColor=#5a5a5a
+			secondaryColor=#2b2b2b
+            transform = 25attach
+            defaultSubtypePriority = 3
+            descriptionSummary = 2.5m Stack Mount
+            descriptionDetail = A standard size mount.
+            NODE
+			{
+				name = top
+				position = 0.0, 1.45, 0.0
+                size = 2
+			}
+		}
+		SUBTYPE
+		{
+			name = Compact
+			primaryColor=#707070
+			secondaryColor=#707070
+            defaultSubtypePriority = 2
+            descriptionSummary = Compact Mount
+            descriptionDetail = A minimum-size mount for clustering.
+            NODE
+			{
+				name = top
+				position = 0.0, 1.07, 0.0
+                size = 2
+			}
 		}
 	}
 }
