--- a/GameData/RocketMotorMenagerie/Parts/rmm_rainier.cfg
+++ b/GameData/RocketMotorMenagerie/Parts/rmm_rainier.cfg
@@ -28,7 +28,7 @@ PART
     subcategory  = 0
     title        = RM-122T 'Rainier' Cryogenic Rocket Engine
     manufacturer = Cassiopeia Propulsion Systems
-    description  = Based on heritage technologies from the venerable KS-25 "Vector" engine, this powerful sustainer engine is designed for low cost and high reliability when used on a wide variety of launch vehicles. Cassiopeia Propulsion Systems is certain it has a bright future with many decades of use as it propels space exploration to reach new achievements.
+    description  = Based on heritage technologies from the venerable RM-25-69 'Cotopaxi' engine, this powerful sustainer engine is designed for low cost and high reliability when used on a wide variety of launch vehicles. Cassiopeia Propulsion Systems is certain it has a bright future with many decades of use as it propels space exploration to reach new achievements.
 
     tags = propuls rocket sustain hydrogen hydrolox cryo rainier 122T stme nls? transportation als? rm? menagerie cassiopeia
 
