--- a/GameData/RocketMotorMenagerie/Parts/rmm_cotopaxi.cfg
+++ b/GameData/RocketMotorMenagerie/Parts/rmm_cotopaxi.cfg
@@ -22,8 +22,8 @@ PART
     attachRules = 1,1,1,0,0
 
     TechRequired = veryHeavyRocketry
-    entryCost = 310000
-    cost = 12200
+	entryCost = 250000
+	cost = 27000
 
     category     = Propulsion
     subcategory  = 0
@@ -36,11 +36,14 @@ PART
     mass = 1.2
 
     dragModelType  = default
-    maximum_drag   = 0.20
-    minimum_drag   = 0.15
-    angularDrag    = 2
-    crashTolerance = 15
-    CoMOffset = 0, 0, 0
+    maximum_drag = 0.2
+	minimum_drag = 0.2
+	angularDrag = 2
+	
+    breakingForce = 400
+	breakingTorque = 400
+	crashTolerance = 22
+	CoMOffset = 0, 0, 0
 
     maxTemp                    = 2000
     heatConductivity           = 0.06
