ssme 150 and updates

--- a/GameData/RocketMotorMenagerie/Compatibility/WaterfallFX/rmm_waterfall_ishtar.cfg
+++ b/GameData/RocketMotorMenagerie/Compatibility/WaterfallFX/rmm_waterfall_ishtar.cfg
@@ -94,7 +94,7 @@
 		{
 			name = throttle
 			linkedTo = throttle
-			responseRateUp = 0.005
+			responseRateUp = 0.01
 			responseRateDown = 0.1
 			engineID = ssme50_150_SL
 		}
@@ -123,7 +123,7 @@
 		name = ModuleWaterfallFX
 		ShowEffectEditor = true
 		// This is a custom name
-		moduleID = ssme150FX
+		moduleID = ssme150_ext_FX
 		// This links the effects to a given ModuleEngines
 		engineID = ssme50_150_vac
 
@@ -137,9 +137,9 @@
 		{
 			name = throttle
 			linkedTo = throttle
-			responseRateUp = 0.005
+			responseRateUp = 0.01
 			responseRateDown = 0.1
-			engineID =  = ssme50_150_vac
+			engineID = ssme50_150_vac
 		}
 		CONTROLLER
 		{
@@ -159,7 +159,7 @@
 			// scale the templated effect
 			position = 0,0,0
 			rotation = 0, 0, 0
-			scale = 1.64, 1.64, 1.8
+			scale = 1.6, 1.6, 1.8
 		}
 	}
 }
