--- a/GameData/RocketMotorMenagerie/Parts/rmm_arenysaurus.cfg
+++ b/GameData/RocketMotorMenagerie/Parts/rmm_arenysaurus.cfg
@@ -13,9 +13,10 @@ PART
     scale = 1
     rescaleFactor = 1.0
 
-    node_stack_top = 0.0, 1.07, 0.0, 0.0, 1.0, 0.0, 2
-    node_attach = 0.0, 1.07, 0.0, 0.0, 1.0, 0.0, 2
+    node_stack_top00 = 0.0, 1.07, 0.0, 0.0, 1.0, 0.0, 2
+    node_stack_top01 = 0.0, 1.45, 0.0, 0.0, 1.0, 0.0, 2
     node_stack_bottom = 0.0, -1.4, 0.0, 0.0, -1.0, 0.0, 2
+    node_attach = 0.0, 1.07, 0.0, 0.0, 1.0, 0.0, 2
 
     bulkheadProfiles = size1p5, size1, size2
         
@@ -74,9 +75,9 @@ PART
 		}
         atmosphereCurve
         {
-            key = 0 355
-            key = 1 325
-            key = 3 9
+            key = 0 351
+            key = 1 323
+            key = 3 47
         }
     }
 
@@ -309,19 +310,28 @@ PART
 		affectFARVoxels = True
 		SUBTYPE
 		{
+			name = Compact
+			primaryColor=#707070
+			secondaryColor=#707070
+            defaultSubtypePriority = 2
+            descriptionSummary = Compact Mount
+            descriptionDetail = A minimum-size mount for clustering.
+            node=top00
+            node=bottom
+            attachNode =  0.0, 1.07, 0.0, 0.0, 1.0, 0.0
+		}
+        SUBTYPE
+		{
 			name = 1.875m Mount
             primaryColor=#5a5a5a
 			secondaryColor=#2b2b2b
             transform = 1875attach
-            defaultSubtypePriority = 4
+            defaultSubtypePriority = 1
             descriptionSummary = 1.875m Stack Mount
             descriptionDetail = A standard size mount.
-            NODE
-			{
-				name = top
-				position = 0.0, 1.45, 0.0
-                size = 2
-			}
+            node=top01
+            node=bottom
+            attachNode =  0.0, 1.45, 0.0, 0.0, 1.0, 0.0
 		}
         SUBTYPE
 		{
@@ -329,30 +339,12 @@ PART
             primaryColor=#5a5a5a
 			secondaryColor=#2b2b2b
             transform = 25attach
-            defaultSubtypePriority = 3
+            defaultSubtypePriority = 0
             descriptionSummary = 2.5m Stack Mount
             descriptionDetail = A standard size mount.
-            NODE
-			{
-				name = top
-				position = 0.0, 1.45, 0.0
-                size = 2
-			}
-		}
-		SUBTYPE
-		{
-			name = Compact
-			primaryColor=#707070
-			secondaryColor=#707070
-            defaultSubtypePriority = 2
-            descriptionSummary = Compact Mount
-            descriptionDetail = A minimum-size mount for clustering.
-            NODE
-			{
-				name = top
-				position = 0.0, 1.07, 0.0
-                size = 2
-			}
+            node=top01
+            node=bottom
+            attachNode =  0.0, 1.45, 0.0, 0.0, 1.0, 0.0
 		}
 	}
 }
