--- a/GameData/RocketMotorMenagerie/Parts/rmm_rainier.cfg
+++ b/GameData/RocketMotorMenagerie/Parts/rmm_rainier.cfg
@@ -13,7 +13,9 @@ PART
     scale = 1
     rescaleFactor = 1.0
 
-    node_stack_top = 0.0, 1.55, 0.0, 0.0, 1.0, 0.0, 2
+    node_stack_top1875 = 0.0, 1.55, 0.0, 0.0, 1.0, 0.0, 2
+    node_stack_top25 = 0.0, 1.58, 0.0, 0.0, 1.0, 0.0, 2
+    node_stack_top00 = 0.0, 1.52, 0.0, 0.0, 1.0, 0.0, 2
     node_stack_bottom = 0.0, -1.32806, 0.0, 0.0, -1.0, 0.0, 2
 
     bulkheadProfiles = size1p5, size1
@@ -313,18 +315,9 @@ PART
             defaultSubtypePriority = 4
             descriptionSummary = 1.875m Stack Mount
             descriptionDetail = A standard size mount.
-            NODE
-			{
-				name = top
-				position = 0.0, 1.55, 0.0
-                size = 2
-			}
-            # NODE
-			# {
-			# 	name = attach
-			# 	position = 0.0, 1.55, 0.0
-            #     size = 2
-			# }
+            node = top1875
+            node = bottom
+            attachNode =  0.0, 1.55, 0.0, 0.0, 1.0, 0.0
 		}
         SUBTYPE
 		{
@@ -335,18 +328,9 @@ PART
             defaultSubtypePriority = 3
             descriptionSummary = 2.5m Stack Mount
             descriptionDetail = A standard size mount.
-            NODE
-			{
-				name = top
-				position = 0.0, 1.58, 0.0
-                size = 2
-			}
-            # NODE
-			# {
-			# 	name = attach
-			# 	position = 0.0, 1.58, 0.0
-            #     size = 2
-			# }
+            node = top25
+            node = bottom
+            attachNode =  0.0, 1.58, 0.0, 0.0, 1.0, 0.0
 		}
 		SUBTYPE
 		{
@@ -357,18 +341,9 @@ PART
             defaultSubtypePriority = 2
             descriptionSummary = Compact Mount
             descriptionDetail = A minimum-size mount for clustering.
-            NODE
-			{
-				name = top
-				position = 0.0, 1.52, 0.0
-                size = 2
-			}
-            # NODE
-			# {
-			# 	name = attach
-			# 	position = 0.0, 1.52, 0.0
-            #     size = 2
-			# }
+            node = top00
+            node = bottom
+            attachNode =  0.0, 1.52, 0.0, 0.0, 1.0, 0.0
 		}
 	}
 }
