--- a/GameData/RocketMotorMenagerie/Compatibility/WaterfallFX/rmm_waterfall_rainier.cfg
+++ b/GameData/RocketMotorMenagerie/Compatibility/WaterfallFX/rmm_waterfall_rainier.cfg
@@ -19,7 +19,57 @@
             PREFAB_PARTICLE
 			{
 				prefabName = fx_smokeTrail_light
-				transformName = smokePoint
+				transformName = smokePoint-common
+				emission = 0.0 0.0
+				emission = 0.05 0.0
+				emission = 0.075 0.25
+				emission = 1.0 1.25
+				speed = 0.0 0.25
+				speed = 1.0 1.0
+				localOffset = 0, 0, 0
+			}
+        }
+		running_booster
+        {
+            AUDIO
+			{
+				channel = Ship
+				clip = sound_rocket_hard
+				volume = 0.0 0.0
+				volume = 1.0 1.0
+				pitch = 0.0 0.2
+				pitch = 1.0 1.0
+				loop = true
+			}
+            PREFAB_PARTICLE
+			{
+				prefabName = fx_smokeTrail_light
+				transformName = smokePoint-booster
+				emission = 0.0 0.0
+				emission = 0.05 0.0
+				emission = 0.075 0.25
+				emission = 1.0 1.25
+				speed = 0.0 0.25
+				speed = 1.0 1.0
+				localOffset = 0, 0, 0
+			}
+        }
+		running_vac
+        {
+            AUDIO
+			{
+				channel = Ship
+				clip = sound_rocket_hard
+				volume = 0.0 0.0
+				volume = 1.0 1.0
+				pitch = 0.0 0.2
+				pitch = 1.0 1.0
+				loop = true
+			}
+            PREFAB_PARTICLE
+			{
+				prefabName = fx_smokeTrail_light
+				transformName = smokePoint-vac
 				emission = 0.0 0.0
 				emission = 0.05 0.0
 				emission = 0.075 0.25
@@ -86,18 +136,60 @@
 			linkedTo = random
 			range = 0,1
 		}
-		// -----------------------------------------------------
-		// Past here should be generated with the ingame editor!
-		// ------
 		TEMPLATE
 		{
-		// This is the name of the template to use
-		templateName = waterfall-hydrolox-lower-4
-		// This field allows you to override the parentTransform name in the EFFECTS contained in the template
-		overrideParentTransform = thrustTransform
-		position = 0,0,0
-		rotation = 0, 0, 0
-		scale = 0.944, 0.944, 0.944
+			templateName = waterfall-hydrolox-lower-4
+			overrideParentTransform = fxTransform-common
+			position = 0,0,0
+			rotation = 0, 0, 0
+			scale = 0.944, 0.944, 0.944
+		}
+	}
+	@MODULE[ModuleB9PartSwitch]:HAS[#moduleID[engineSwitch]]
+	{
+		@SUBTYPE[STME_booster]
+		{
+			MODULE
+			{
+				IDENTIFIER
+				{
+					name = ModuleWaterfallFX
+					moduleID = stmeFX
+				}
+				DATA
+				{
+					TEMPLATE
+					{
+						templateName = waterfall-hydrolox-lower-4
+						overrideParentTransform = fxTransform-booster
+						position = 0,0,-0.32
+						rotation = 0, 0, 0
+						scale = 0.876, 0.876, 1.2
+					}
+				}
+			}
+		}
+		@SUBTYPE[STME_vac]
+		{
+			MODULE
+			{
+				IDENTIFIER
+				{
+					name = ModuleWaterfallFX
+					moduleID = stmeFX
+				}
+				DATA
+				{
+					TEMPLATE
+					{
+						templateName = waterfall-hydrolox-lower-4
+						overrideParentTransform = fxTransform-vac
+						position = 0,0,0.665
+						rotation = 0, 0, 0
+						scale = 1.053, 1.053, 0.9
+					}
+				}
+			}
 		}
 	}
 }
