--- a/GameData/RocketMotorMenagerie/Parts/rmm_rainier.cfg
+++ b/GameData/RocketMotorMenagerie/Parts/rmm_rainier.cfg
@@ -16,7 +16,9 @@ PART
     node_stack_top1875 = 0.0, 1.55, 0.0, 0.0, 1.0, 0.0, 2
     node_stack_top25 = 0.0, 1.58, 0.0, 0.0, 1.0, 0.0, 2
     node_stack_top00 = 0.0, 1.52, 0.0, 0.0, 1.0, 0.0, 2
-    node_stack_bottom = 0.0, -1.32806, 0.0, 0.0, -1.0, 0.0, 2
+    node_stack_bottom-common = 0.0, -1.32806, 0.0, 0.0, -1.0, 0.0, 2
+    node_stack_bottom-booster = 0.0, -1.016, 0.0, 0.0, -1.0, 0.0, 2
+    node_stack_bottom-vac = 0.0, -1.9915, 0.0, 0.0, -1.0, 0.0, 2
 
     bulkheadProfiles = size1p5, size1
         
@@ -30,7 +32,7 @@ PART
     subcategory  = 0
     title        = RM-122T 'Rainier' Cryogenic Rocket Engine
     manufacturer = Cassiopeia Propulsion Systems
-    description  = Based on heritage technologies from the venerable RM-25-69 'Cotopaxi' engine, this powerful sustainer engine is designed for low cost and high reliability when used on a wide variety of launch vehicles. Cassiopeia Propulsion Systems is certain it has a bright future with many decades of use as it propels space exploration to reach new achievements.
+    description  = Based on heritage technologies from the venerable RM-25-69 'Cotopaxi' engine, this powerful sustainer engine is designed for low cost and high reliability when used on a wide variety of launch vehicles. Cassiopeia Propulsion Systems is certain it has a bright future with many decades of use as it propels space exploration to reach new achievements. Comes with nozzle variants for better performance as a booster, sustainer, or high altitude engine.
 
     tags = propuls rocket sustain hydrogen hydrolox cryo rainier 122T stme nls? transportation als? rm? menagerie cassiopeia
 
@@ -208,7 +210,7 @@ PART
             PREFAB_PARTICLE
 			{
 				prefabName = fx_smokeTrail_light
-				transformName = smokePoint
+				transformName = smokePoint-common
 				emission = 0.0 0.0
 				emission = 0.05 0.0
 				emission = 0.075 0.25
@@ -221,7 +223,7 @@ PART
 			{
                 name = core
 				modelName = RocketMotorMenagerie/FX/fx-vesuvius-core-1
-				transformName = fxTransformCore
+				transformName = fxTransformCore-common
 				emission = 0.0 0.0
 				emission = 0.05 0.0
 				emission = 0.075 0.25
@@ -234,7 +236,7 @@ PART
 			{
                 name = plume
 				modelName =  RocketMotorMenagerie/FX/fx-vesuvius-plume-1
-				transformName = fxTransformPlume
+				transformName = fxTransformPlume-common
 				emission = 0.0 0.0
 				emission = 0.05 0.0
 				emission = 0.075 0.25
@@ -242,6 +244,108 @@ PART
 				speed = 0.0 0.5
 				speed = 1.0 1.2
                 localScale = 1.452, 1.452, 1.452
+			}
+        }
+        running_booster
+        {
+            AUDIO
+			{
+				channel = Ship
+				clip = sound_rocket_hard
+				volume = 0.0 0.0
+				volume = 1.0 1.0
+				pitch = 0.0 0.2
+				pitch = 1.0 1.0
+				loop = true
+			}
+            PREFAB_PARTICLE
+			{
+				prefabName = fx_smokeTrail_light
+				transformName = smokePoint-booster
+				emission = 0.0 0.0
+				emission = 0.05 0.0
+				emission = 0.075 0.25
+				emission = 1.0 1.25
+				speed = 0.0 0.25
+				speed = 1.0 1.0
+				localOffset = 0, 0, 0
+			}
+            MODEL_MULTI_PARTICLE
+			{
+                name = core
+				modelName = RocketMotorMenagerie/FX/fx-vesuvius-core-1
+				transformName = fxTransformCore-booster
+				emission = 0.0 0.0
+				emission = 0.05 0.0
+				emission = 0.075 0.25
+				emission = 1.0 1.25
+				speed = 0.0 0.5
+				speed = 1.0 1.2
+                localScale = 1.348, 1.348, 1.348
+			}
+			MODEL_MULTI_PARTICLE
+			{
+                name = plume
+				modelName =  RocketMotorMenagerie/FX/fx-vesuvius-plume-1
+				transformName = fxTransformPlume-booster
+				emission = 0.0 0.0
+				emission = 0.05 0.0
+				emission = 0.075 0.25
+				emission = 1.0 1.25
+				speed = 0.0 0.5
+				speed = 1.0 1.2
+                localScale = 1.348, 1.348, 1.348
+			}
+        }
+        running_vac
+        {
+            AUDIO
+			{
+				channel = Ship
+				clip = sound_rocket_hard
+				volume = 0.0 0.0
+				volume = 1.0 1.0
+				pitch = 0.0 0.2
+				pitch = 1.0 1.0
+				loop = true
+			}
+            PREFAB_PARTICLE
+			{
+				prefabName = fx_smokeTrail_light
+				transformName = smokePoint-vac
+				emission = 0.0 0.0
+				emission = 0.05 0.0
+				emission = 0.075 0.25
+				emission = 1.0 1.25
+				speed = 0.0 0.25
+				speed = 1.0 1.0
+				localOffset = 0, 0, 0
+			}
+            MODEL_MULTI_PARTICLE
+			{
+                name = core
+				modelName = RocketMotorMenagerie/FX/fx-vesuvius-core-1
+				transformName = fxTransformCore-vac
+				emission = 0.0 0.0
+				emission = 0.05 0.0
+				emission = 0.075 0.25
+				emission = 1.0 1.25
+				speed = 0.0 0.5
+				speed = 1.0 1.2
+                localScale = 1.619, 1.619, 1.619
+			}
+			MODEL_MULTI_PARTICLE
+			{
+                name = plume
+				modelName =  RocketMotorMenagerie/FX/fx-vesuvius-plume-1
+				transformName = fxTransformPlume-vac
+				emission = 0.0 0.0
+				emission = 0.05 0.0
+				emission = 0.075 0.25
+				emission = 1.0 1.25
+				speed = 0.0 0.5
+				speed = 1.0 1.2
+                localScale = 1.619, 1.619, 1.619
 			}
         }
         engage
@@ -316,7 +420,6 @@ PART
             descriptionSummary = 1.875m Stack Mount
             descriptionDetail = A standard size mount.
             node = top1875
-            node = bottom
             attachNode =  0.0, 1.55, 0.0, 0.0, 1.0, 0.0
 		}
         SUBTYPE
@@ -329,21 +432,105 @@ PART
             descriptionSummary = 2.5m Stack Mount
             descriptionDetail = A standard size mount.
             node = top25
-            node = bottom
             attachNode =  0.0, 1.58, 0.0, 0.0, 1.0, 0.0
 		}
 		SUBTYPE
 		{
 			name = Compact
-			rimaryColor=#707070
+			primaryColor=#707070
 			secondaryColor=#707070
             transform = bare_attach
             defaultSubtypePriority = 2
             descriptionSummary = Compact Mount
             descriptionDetail = A minimum-size mount for clustering.
             node = top00
-            node = bottom
             attachNode =  0.0, 1.52, 0.0, 0.0, 1.0, 0.0
 		}
 	}
+    MODULE
+	{
+		name = ModuleB9PartSwitch
+		switcherDescription = Engine Config
+		switcherDescriptionPlural = Engine Configs
+		moduleID = engineSwitch
+
+		SUBTYPE
+		{
+			name = STME_common
+			title = RM-122T 'Rainier'
+			descriptionSummary = Standard STME configuration.
+			descriptionDetail = //<b>Thrust:</b> 614 kN ASL / 723 kN Vac.\n<b>Isp:</b> 364 s ASL / 428.5 s Vac.
+			defaultSubtypePriority = 4
+			transform = common_nozzle
+            node = bottom-common
+            primaryColor=#707070
+			secondaryColor=#b1773c
+		}
+
+        SUBTYPE
+		{
+			name = STME_booster
+			title = RM-122B 'Rainier'
+			descriptionSummary = STME with a nozzle optimized for booster applications.
+			descriptionDetail = //<b>Thrust:</b> 676 kN ASL / 723 kN Vac.\n<b>Isp:</b> 387 s ASL / 414 s Vac.
+			defaultSubtypePriority = 3
+			transform = booster_nozzle
+            node = bottom-booster
+            addedMass = -0.1
+            primaryColor=#c7c7c7
+			secondaryColor=#b1773c
+
+            MODULE
+			{
+				IDENTIFIER
+				{
+					name = ModuleEnginesFX
+				}
+
+				DATA
+				{
+					runningEffectName = running_booster
+					atmosphereCurve
+                    {
+                        key = 0 414
+                        key = 1 387 
+                        key = 3 25
+                    }
+				}
+			}
+		}
+
+        SUBTYPE
+		{
+			name = STME_vac
+			title = RM-122V 'Rainier'
+			descriptionSummary = STME with a nozzle optimized for high-altitude and vacuum applications.
+			descriptionDetail = //<b>Thrust:</b> 568 kN ASL / 723 kN Vac.\n<b>Isp:</b> 344 s ASL / 438 s Vac.
+			defaultSubtypePriority = 3
+			transform = vac_nozzle
+            node = bottom-vac
+            addedMass = 0.18
+            primaryColor=#c7c7c7
+			secondaryColor=#707070
+
+            MODULE
+			{
+				IDENTIFIER
+				{
+					name = ModuleEnginesFX
+				}
+
+				DATA
+				{
+					runningEffectName = running_vac
+					atmosphereCurve
+                    {
+                        key = 0 438
+                        key = 1 344 
+                        key = 3 25
+                    }
+				}
+			}
+		}
+    }
 }
