--- a/GameData/RocketMotorMenagerie/Compatibility/WaterfallFX/rmm_waterfall_dugong.cfg
+++ b/GameData/RocketMotorMenagerie/Compatibility/WaterfallFX/rmm_waterfall_dugong.cfg
@@ -87,18 +87,14 @@
 			linkedTo = random
 			range = 0,1
 		}
-		// -----------------------------------------------------
-		// Past here should be generated with the ingame editor!
-		// ------
 		TEMPLATE
 		{
-		// This is the name of the template to use
-		templateName = waterfall-kerolox-lower-RD170-1
-		// This field allows you to override the parentTransform name in the EFFECTS contained in the template
-		overrideParentTransform = thrustTransform
-		position = 0,0,0
-		rotation = 0, 0, 0
-		scale = 2.15, 2.15, 2.4
+			templateName = waterfall-kerolox-lower-RD170-1
+			// This  allows you to override the parentTransform name in the EFFECTS contained in the template
+			overrideParentTransform = thrustTransform
+			position = 0,0,0
+			rotation = 0, 0, 0
+			scale = 2.15, 2.15, 2.4
  		}
 	}	
 }
