--- a/GameData/RocketMotorMenagerie/Parts/rmm_cotopaxi.cfg
+++ b/GameData/RocketMotorMenagerie/Parts/rmm_cotopaxi.cfg
@@ -15,6 +15,7 @@ PART
 
     node_stack_top00 = 0.0, 1.07, 0.0, 0.0, 1.0, 0.0, 2
     node_stack_top01 = 0.0, 1.45, 0.0, 0.0, 1.0, 0.0, 2
+    node_stack_sts = 0.0, 0.263, 0.0, 0.0, 1.0, 0.0, 2
     node_stack_bottom = 0.0, -1.6, 0.0, 0.0, -1.0, 0.0, 2
     node_attach = 0.0, 1.07, 0.0, 0.0, 1.0, 0.0, 2
 
@@ -313,7 +314,7 @@ PART
 			name = Compact
 			primaryColor=#707070
 			secondaryColor=#707070
-            defaultSubtypePriority = 2
+            defaultSubtypePriority = 3
             descriptionSummary = Compact Mount
             descriptionDetail = A minimum-size mount for clustering.
             node=top00
@@ -326,7 +327,7 @@ PART
             primaryColor=#5a5a5a
 			secondaryColor=#2b2b2b
             transform = 1875attach
-            defaultSubtypePriority = 1
+            defaultSubtypePriority = 2
             descriptionSummary = 1.875m Stack Mount
             descriptionDetail = A standard size mount.
             node=top01
@@ -339,12 +340,25 @@ PART
             primaryColor=#5a5a5a
 			secondaryColor=#2b2b2b
             transform = 25attach
-            defaultSubtypePriority = 0
+            defaultSubtypePriority = 1
             descriptionSummary = 2.5m Stack Mount
             descriptionDetail = A standard size mount.
             node=top01
             node=bottom
             attachNode =  0.0, 1.45, 0.0, 0.0, 1.0, 0.0
+		}
+        SUBTYPE
+		{
+			name = STS Mount
+            primaryColor=#b0aeac
+			secondaryColor=#2b2b2b
+            transform = sts-mount
+            defaultSubtypePriority = 0
+            descriptionSummary = Shuttle Stack Mount
+            descriptionDetail = For attaching SSMEs to the Space Transportation System Earth Orbit Shuttle.
+            node=sts
+            node=bottom
+            attachNode =  0.0, 0.263, 0.0, 0.0, 1.0, 0.0
 		}
 	}
 }
