--- a/GameData/RocketMotorMenagerie/Parts/rmm_rainier.cfg
+++ b/GameData/RocketMotorMenagerie/Parts/rmm_rainier.cfg
@@ -471,7 +471,7 @@ PART
 		{
 			name = STME_booster
 			title = RM-122B 'Rainier'
-			descriptionSummary = STME with a nozzle optimized for booster applications.
+			descriptionSummary = STME with a shorter nozzle optimized for booster applications.
 			descriptionDetail = //<b>Thrust:</b> 676 kN ASL / 723 kN Vac.\n<b>Isp:</b> 387 s ASL / 414 s Vac.
 			defaultSubtypePriority = 3
 			transform = booster_nozzle
@@ -504,7 +504,7 @@ PART
 		{
 			name = STME_vac
 			title = RM-122V 'Rainier'
-			descriptionSummary = STME with a nozzle optimized for high-altitude and vacuum applications.
+			descriptionSummary = STME with a LOOONG nozzle optimized for high-altitude and vacuum applications.
 			descriptionDetail = //<b>Thrust:</b> 568 kN ASL / 723 kN Vac.\n<b>Isp:</b> 344 s ASL / 438 s Vac.
 			defaultSubtypePriority = 3
 			transform = vac_nozzle
