--- a/GameData/RocketMotorMenagerie/Parts/rmm_arenysaurus.cfg
+++ b/GameData/RocketMotorMenagerie/Parts/rmm_arenysaurus.cfg
@@ -23,16 +23,16 @@ PART
     attachRules = 1,1,1,0,0
 
     TechRequired = veryHeavyRocketry
-    entryCost = 310000
-    cost = 12200
+    entryCost = 300000
+    cost = 27000
 
     category     = Propulsion
     subcategory  = 0
     title        = RM-4LR-35 'Arenysaurus' Cryogenic Rocket Engine
     manufacturer = Cassiopeia Propulsion Systems
-    description  = LRBE SSME-35
+    description  = The 'Arenysaurus' is what you need for boosters that need something even more powerful than the 'Kilimanjaro'. Utilizing methalox propellants and a 35:1 expansion nozzle, this engine is well-suited for liquid rocket boosters than need a great balance of high thrust and high ISP.
 
-    tags = propuls rocket booster methane methalox cryo rs25 ssme transportation rm? menagerie cassiopeia ?25 shuttle sts boldy LRB booster 35 lrbe
+    tags = propuls rocket booster methane methalox cryo rs25 ssme lrbe transportation rm? menagerie cassiopeia ?25 shuttle sts boldy LRB booster 35 lrbe cass
 
     mass = 1.05
 
