--- a/GameData/RocketMotorMenagerie/Parts/rmm_arsia.cfg
+++ b/GameData/RocketMotorMenagerie/Parts/rmm_arsia.cfg
@@ -23,14 +23,14 @@ PART
     attachRules = 1,1,1,0,0
 
     TechRequired = veryHeavyRocketry
-	entryCost = 250000
-	cost = 27000
+	entryCost = 350000
+	cost = 40000
 
     category     = Propulsion
     subcategory  = 0
     title        = RM-25-TMI 'Arsia' Cryogenic Rocket Engine
     manufacturer = Cassiopeia Propulsion Systems
-    description  = SSME derived engine for TMI
+    description  = The 'Arsia' is really, really, REALLY big. After all, its got a 1:800 expansion ratio. Derived from the 'Cotopaxi', it was built for use on Duna Transfer Vehicles to for the Duna Transfer Injection burn.
 
     tags = propuls rocket sustain hydrogen hydrolox cryo rs25 ssme transportation rm? menagerie cassiopeia ?25 shuttle sts 650 tmi
 
