--- a/GameData/RocketMotorMenagerie/Parts/rmm_ceraunius.cfg
+++ b/GameData/RocketMotorMenagerie/Parts/rmm_ceraunius.cfg
@@ -23,14 +23,14 @@ PART
     attachRules = 1,1,1,0,0
 
     TechRequired = veryHeavyRocketry
-	entryCost = 250000
-	cost = 27000
+	entryCost = 290000
+	cost = 30000
 
     category     = Propulsion
     subcategory  = 0
     title        = RM-25-150 'Ceraunius' Cryogenic Rocket Engine
     manufacturer = Cassiopeia Propulsion Systems
-    description  = SSME-150
+    description  = Sometimes, you need a really powerful vacuum-optimized engine quickly. 'Ceraunius' is just that engine. It is based on the venerable 'Cotopaxi' but uses a nozzle with a 150:1 expansion area ratio. Due to some technical heritage from the 'Cotopaxi', it needs to be kept  cold if you want to restart it on-orbit, so it comes with an orbital variant painted white to reflect the heat. Also includes foil mounting options.  
 
     tags = propuls rocket sustain hydrogen hydrolox cryo rs25 ssme transportation rm? menagerie cassiopeia ?25 shuttle sts 69
 
