--- a/GameData/RocketMotorMenagerie/Parts/rmm_cotopaxi.cfg
+++ b/GameData/RocketMotorMenagerie/Parts/rmm_cotopaxi.cfg
@@ -31,9 +31,9 @@ PART
     subcategory  = 0
     title        = RM-25-69 'Cotopaxi' Cryogenic Rocket Engine
     manufacturer = Cassiopeia Propulsion Systems
-    description  = SSME
+    description  = One of the most incredibly iconic and popular engines in the business, the 'Cotopaxi' is a capable sustainer engine. 
 
-    tags = propuls rocket sustain hydrogen hydrolox cryo rs25 ssme transportation rm? menagerie cassiopeia ?25 shuttle sts 69
+    tags = propuls rocket sustain hydrogen hydrolox cryo rs25 ssme transportation rm? menagerie cassiopeia ?25 shuttle sts 69 cass
 
     mass = 1.2
 
