--- a/GameData/RocketMotorMenagerie/Parts/rmm_dugong.cfg
+++ b/GameData/RocketMotorMenagerie/Parts/rmm_dugong.cfg
@@ -23,18 +23,18 @@ PART
     attachRules = 1,1,1,0,0
 
     TechRequired = veryHeavyRocketry
-    entryCost = 310000
-    cost = 12200
+	entryCost = 340000
+	cost = 32500
 
     category     = Propulsion
     subcategory  = 0
     title        = RM-S3S-35 'Dugong' Cryogenic Rocket Engine
     manufacturer = Cassiopeia Propulsion Systems
-    description  = SSBE. Intended for use on liquid rocket boosters. Can only gimble in one axle.
+    description  = The 'Dugong' is the result of modifying a 'Cotopaxi' to use Liquid Fuel and then sticking a 1:35 expansion nozzle on the flamey end. (Yeah, you read that right.) It can be used on liquid rocket boosters or on dual-mode SSTOs, where it can provide high thrust early in flight. It was hard to fit the new coolant and  Liquid Fuel turbopumps onto the engine, so it can only gimble in one plane. Best used in clusters.
 
-    tags = propuls rocket booster kerosene kerolox cryo liquid fuel LF rs25 ssme transportation rm? menagerie cassiopeia ?25 shuttle sts boldy LRB booster 35 SSBE
+    tags = propuls rocket booster kerosene kerolox liquid fuel LF rs25 ssme transportation rm? menagerie cassiopeia cass ?1875 ?25 shuttle sts LRB booster 35 ssbe ssto
 
-    mass = 1.1
+    mass = 1.14
 
     dragModelType  = default
     maximum_drag   = 0.20
