--- a/GameData/RocketMotorMenagerie/Parts/rmm_ishtar.cfg
+++ b/GameData/RocketMotorMenagerie/Parts/rmm_ishtar.cfg
@@ -23,16 +23,16 @@ PART
     attachRules = 1,1,1,0,1
 
     TechRequired = veryHeavyRocketry
-    entryCost = 310000
-    cost = 12200
+	entryCost = 320000
+	cost = 36000
 
     category     = Propulsion
     subcategory  = 0
     title        = RM-25-50X 'Ishtar' Cryogenic Rocket Engine
     manufacturer = Cassiopeia Propulsion Systems
-    description  = RS-25 SSME-50/150
+    description  = The 'Ishtar' is a modified 'Cotopaxi' with a two-position retractable nozzle. It has a fixed nozzle with a 1:50 expansion area ratio and the retractable portion increases that expansion to 1:150. This makes it a fairly wacky engine, best suited for SSTO vehicles.
 
-    tags = propuls rocket sustain hydrogen hydrolox cryo rs25 ssme transportation rm? menagerie cassiopeia ?25 shuttle sts 50 ssto 150 rlv reusable
+    tags = propuls rocket sustain hydrogen hydrolox cryo rs25 ssme transportation rm? menagerie cassiopeia ?25 shuttle sts 50 ssto 150 rlv reusable cass
 
     mass = 1.43
 
