--- a/GameData/RocketMotorMenagerie/Parts/rmm_kilimanjaro.cfg
+++ b/GameData/RocketMotorMenagerie/Parts/rmm_kilimanjaro.cfg
@@ -23,16 +23,16 @@ PART
     attachRules = 1,1,1,0,0
 
     TechRequired = veryHeavyRocketry
-    entryCost = 310000
-    cost = 12200
+	entryCost = 280000
+	cost = 26000
 
     category     = Propulsion
     subcategory  = 0
     title        = RM-25-35 'Kilimanjaro' Cryogenic Rocket Engine
     manufacturer = Cassiopeia Propulsion Systems
-    description  = Based on the RM-25-69 'Cotopaxi', this has a new nozzle with a 35:1 area ratio. This modification produces an engine with improved performance and thrust at lower altitudes, making it well suited for booster applications.
+    description  = Based on the 'Cotopaxi', this has a nozzle with a 35:1 expansion area ratio. This modification produces an engine with improved performance and thrust at lower altitudes, making it well suited for booster applications.
 
-    tags = propuls rocket sustain hydrogen hydrolox cryo rs25 ssme transportation rm? menagerie cassiopeia ?25 shuttle sts boldy LRB booster 35 atlas
+    tags = propuls rocket sustain hydrogen hydrolox cryo rs25 ssme transportation rm? menagerie cassiopeia ?25 shuttle sts boldy LRB booster 35 atlas cass
 
     mass = 1.02
 
