--- a/GameData/RocketMotorMenagerie/Parts/rmm_osorno.cfg
+++ b/GameData/RocketMotorMenagerie/Parts/rmm_osorno.cfg
@@ -23,16 +23,16 @@ PART
     attachRules = 1,1,1,0,0
 
     TechRequired = veryHeavyRocketry
-    entryCost = 310000
-    cost = 12200
+    entryCost = 280000
+    cost = 27000
 
     category     = Propulsion
     subcategory  = 0
     title        = RM-25-50 'Osorno' Cryogenic Rocket Engine
     manufacturer = Cassiopeia Propulsion Systems
-    description  = RS-25 SSME-50
+    description  = The 'Osorno', with its 50:1 expansion area ratio nozzle, occupies that space in between the 'Cotopaxi' and the 'Kilimanjaro'. It is a very versatile engine that can be used for a variety of first-stage applications.
 
-    tags = propuls rocket sustain hydrogen hydrolox cryo rs25 ssme transportation rm? menagerie cassiopeia ?25 shuttle sts 50
+    tags = propuls rocket sustain hydrogen hydrolox cryo rs25 ssme transportation rm? menagerie cassiopeia ?25 shuttle sts 50 cass
 
     mass = 1.09
 
