--- a/GameData/RocketMotorMenagerie/Parts/rmm_rainier.cfg
+++ b/GameData/RocketMotorMenagerie/Parts/rmm_rainier.cfg
@@ -25,14 +25,14 @@ PART
     attachRules = 1,1,1,0,0
 
     TechRequired = veryHeavyRocketry
-    entryCost = 310000
-    cost = 12200
+    entryCost = 240000
+    cost = 14200
 
     category     = Propulsion
     subcategory  = 0
     title        = RM-122T 'Rainier' Cryogenic Rocket Engine
     manufacturer = Cassiopeia Propulsion Systems
-    description  = Based on heritage technologies from the venerable RM-25-69 'Cotopaxi' engine, this powerful sustainer engine is designed for low cost and high reliability when used on a wide variety of launch vehicles. Cassiopeia Propulsion Systems is certain it has a bright future with many decades of use as it propels space exploration to reach new achievements. Comes with nozzle variants for better performance as a booster, sustainer, or high altitude engine.
+    description  = Based on heritage technologies from the venerable 'Cotopaxi', this powerful sustainer engine is designed for low cost and high reliability when used on a wide variety of launch vehicles. Cassiopeia Propulsion Systems is certain it has a bright future with many decades of use as it propels space exploration to reach new achievements. Comes with nozzle variants for better performance as a booster, sustainer, or high altitude engine.
 
     tags = propuls rocket sustain hydrogen hydrolox cryo rainier 122T stme nls? transportation als? rm? menagerie cassiopeia
 
