--- a/GameData/RocketMotorMenagerie/Parts/rmm_turiasaurus.cfg
+++ b/GameData/RocketMotorMenagerie/Parts/rmm_turiasaurus.cfg
@@ -23,14 +23,14 @@ PART
     attachRules = 1,1,1,0,0
 
     TechRequired = veryHeavyRocketry
-    entryCost = 310000
-    cost = 12200
+	entryCost = 260000
+	cost = 15000
 
     category     = Propulsion
     subcategory  = 0
     title        = RM-13SE 'Turiasaurus' Cryogenic Rocket Engine
     manufacturer = Cassiopeia Propulsion Systems
-    description  = STBE
+    description  = The 'Turiasaurus' is highly reliable, low cost booster engine that uses an innovative methalox split expander cycle. It is intended for use on reusable vehicles, but it's cheap enough that you can put it on an expendable vehicle as well.
 
     tags = propuls rocket sustain methane methalox cryo als advanced rm? menagerie cassiopeia ?25 expander
 
