--- a/RMM_Extras (No Warranty)/RS800K/rmm_wakulla.cfg
+++ b/RMM_Extras (No Warranty)/RS800K/rmm_wakulla.cfg
@@ -22,16 +22,17 @@ PART
     attachRules = 1,1,1,0,0
 
     TechRequired = veryHeavyRocketry
-    entryCost = 310000
-    cost = 12200
+    TechRequired = heavierRocketry
+    entryCost = 300000
+    cost = 17500
 
     category     = Propulsion
     subcategory  = 0
     title        = RM-800K 'Wakulla' Cryogenic Rocket Engine
     manufacturer = Cassiopeia Propulsion Systems
-    description  = Upgrade for Daleth IV
+    description  = Designed as a upgrade for super heavy launch vehicles vehicles based on the Daleth-IV, the 'Wakulla' packs quite a punch. We know it may bear a passing resemblance to the 'Rainier', but we are completely sure that it is a different engine.
 
-    tags = propuls rocket sustain hydrogen hydrolox cryo wakulla 800K rs rs-800K delta daleth IV four delta? rm? menagerie cassiopeia
+    tags = propuls rocket sustain hydrogen hydrolox cryo wakulla 800K rs rs-800K delta daleth IV four delta? rm? menagerie cassiopeia shlv super heavy hlv
 
     mass = 3.07
 
