alt ssme configs

--- a/GameData/RocketMotorMenagerie/Parts/rmm_arenysaurus.cfg
+++ b/GameData/RocketMotorMenagerie/Parts/rmm_arenysaurus.cfg
@@ -30,7 +30,7 @@ PART
     subcategory  = 0
     title        = RM-4LR-35 'Arenysaurus' Cryogenic Rocket Engine
     manufacturer = Cassiopeia Propulsion Systems
-    description  = The 'Arenysaurus' is what you need for boosters that need something even more powerful than the 'Kilimanjaro'. Utilizing methalox propellants and a 35:1 expansion nozzle, this engine is well-suited for liquid rocket boosters than need a great balance of high thrust and high ISP.
+    description  = The 'Arenysaurus' is what you need for boosters that need something even more powerful than the 'Kilimanjaro'. Utilizing methalox propellants and a 35:1 expansion nozzle, this engine is well-suited for liquid rocket boosters that need a great balance of high thrust and high ISP.
 
     tags = propuls rocket booster methane methalox cryo rs25 ssme lrbe transportation rm? menagerie cassiopeia ?25 shuttle sts boldy LRB booster 35 lrbe cass
 
