--- a/GameData/RocketMotorMenagerie/Parts/rmm_arsia.cfg
+++ b/GameData/RocketMotorMenagerie/Parts/rmm_arsia.cfg
@@ -28,7 +28,7 @@ PART
 
     category     = Propulsion
     subcategory  = 0
-    title        = RM-25-TMI 'Arsia' Cryogenic Rocket Engine
+    title        = RM-25-TDI 'Arsia' Cryogenic Rocket Engine
     manufacturer = Cassiopeia Propulsion Systems
     description  = The 'Arsia' is really, really, REALLY big. After all, its got a 1:800 expansion ratio. Derived from the 'Cotopaxi', it was built for use on Duna Transfer Vehicles to for the Duna Transfer Injection burn.
 
