--- a/GameData/RocketMotorMenagerie/Parts/rmm_ceraunius.cfg
+++ b/GameData/RocketMotorMenagerie/Parts/rmm_ceraunius.cfg
@@ -30,7 +30,7 @@ PART
     subcategory  = 0
     title        = RM-25-150 'Ceraunius' Cryogenic Rocket Engine
     manufacturer = Cassiopeia Propulsion Systems
-    description  = Sometimes, you need a really powerful vacuum-optimized engine quickly. 'Ceraunius' is just that engine. It is based on the venerable 'Cotopaxi' but uses a nozzle with a 150:1 expansion area ratio. Due to some technical heritage from the 'Cotopaxi', it needs to be kept  cold if you want to restart it on-orbit, so it comes with an orbital variant painted white to reflect the heat. Also includes foil mounting options.  
+    description  = Derived from the 'Cotopaxi', the 'Ceraunius' was developed for an allegedly rushed upper stage engine. 'Ceraunius' is just that engine. It is based on the venerable 'Cotopaxi' but uses a nozzle with a 150:1 expansion area ratio. Due to some technical heritage from the 'Cotopaxi', it needs to be kept  cold if you want to restart it on-orbit, so it comes with an orbital variant painted white to reflect the heat. Also includes foil mounting options.  
 
     tags = propuls rocket sustain hydrogen hydrolox cryo rs25 ssme transportation rm? menagerie cassiopeia ?25 shuttle sts 69
 
