--- a/GameData/RocketMotorMenagerie/Parts/rmm_cotopaxi.cfg
+++ b/GameData/RocketMotorMenagerie/Parts/rmm_cotopaxi.cfg
@@ -81,7 +81,7 @@ PART
         {
             key = 0 452
             key = 1 366
-            key = 3 9
+            key = 3 25
         }
     }
 
@@ -359,6 +359,125 @@ PART
             node=sts
             node=bottom
             attachNode =  0.0, 0.263, 0.0, 0.0, 1.0, 0.0
+		}
+	}
+    MODULE
+	{
+		name = ModuleB9PartSwitch
+		switcherDescription = Engine Config
+		switcherDescriptionPlural = Engine Configs
+		moduleID = engineSwitch
+	 	SUBTYPE
+		{
+			name = ssme_FOMF
+			title = RM-25-69 "Cotopaxi" FOCF
+			descriptionSummary = The first operational 'Cotopaxi' engine. Used for the First Orbital Crewed Flight of the Shuttle Orbiter.
+			descriptionDetail = <b>Thrust:</b> 423 kN ASL / 522 kN Vac.\n<b>Isp:</b> 366 s ASL / 452 s Vac.
+            addedMass = -.104
+			MODULE
+			{
+				IDENTIFIER
+				{
+					name = ModuleEnginesFX
+				}
+
+				DATA
+				{
+					maxThrust = 522
+				}
+			}
+		}
+        SUBTYPE
+		{
+			name = ssme_Block1
+			title = RM-25-69 "Cotopaxi" Block I
+			descriptionSummary = A version of the 'Cotopaxi' with a series of incremental upgrades to implemented to improve performance.
+			descriptionDetail = <b>Thrust:</b> 442 kN ASL / 546 kN Vac.\n<b>Isp:</b> 366 s ASL / 452 s Vac.
+            addedMass = -.06
+			MODULE
+			{
+				IDENTIFIER
+				{
+					name = ModuleEnginesFX
+				}
+
+				DATA
+				{
+					maxThrust = 546
+				}
+			}
+		}
+        SUBTYPE
+		{
+			name = ssme_BlockII
+			title = RM-25-69 "Cotopaxi" Block II
+			descriptionSummary = The standard, modern 'Cotopaxi' with a larger main combustion chamber throat to increase thrust.
+			descriptionDetail = <b>Thrust:</b> 462 kN ASL / 570 kN Vac.\n<b>Isp:</b> 366 s ASL / 452 s Vac.
+			defaultSubtypePriority = 10
+            MODULE
+			{
+				IDENTIFIER
+				{
+					name = ModuleEnginesFX
+				}
+
+				DATA
+				{
+					maxThrust = 570
+				}
+			}
+		}
+        SUBTYPE
+        {
+			name = ssme_BlockIII
+			title = RM-25-69 "Cotopaxi" Block III
+			descriptionSummary = Block III represents the latest in 'Cotopaxi' improvements, achieving 20% more thrust than the earliest models.
+			descriptionDetail = <b>Thrust:</b> 506 kN ASL / 626 kN Vac.\n<b>Isp:</b> 364.5 s ASL / 450.5 s Vac.
+			MODULE
+			{
+				IDENTIFIER
+				{
+					name = ModuleEnginesFX
+				}
+
+				DATA
+				{
+					maxThrust = 626
+                    atmosphereCurve
+                    {
+                        key = 0 450.5
+                        key = 1 364.5
+                        key = 3 25
+                    }
+				}
+			}
+		}
+        SUBTYPE
+        {
+			name = RS-53
+			title = RM-53E "Reventador"
+			descriptionSummary = The RM-53E "Reventador" is a version of the 'Cotopaxi' modified for use on expendable launch vehicles. 
+			descriptionDetail = <b>Thrust:</b> 462 kN ASL / 522 kN Vac.\n<b>Isp:</b> 368 s ASL / 454 s Vac.
+            addedMass = -.112
+            addedCost = -7000
+			MODULE
+			{
+				IDENTIFIER
+				{
+					name = ModuleEnginesFX
+				}
+
+				DATA
+				{
+					maxThrust = 570
+                    atmosphereCurve
+                    {
+                        key = 0 454
+                        key = 1 368
+                        key = 3 25
+                    }
+				}
+			}
 		}
 	}
 }
