sts mount and foil fixes

--- a/GameData/RocketMotorMenagerie/Parts/rmm_ceraunius.cfg
+++ b/GameData/RocketMotorMenagerie/Parts/rmm_ceraunius.cfg
@@ -15,6 +15,7 @@ PART
 
     node_stack_top00 = 0.0, 1.07, 0.0, 0.0, 1.0, 0.0, 2
     node_stack_top01 = 0.0, 1.45, 0.0, 0.0, 1.0, 0.0, 2
+    node_stack_sts = 0.0, 0.263, 0.0, 0.0, 1.0, 0.0, 2
     node_stack_bottom = 0.0, -2.38, 0.0, 0.0, -1.0, 0.0, 2
     node_attach = 0.0, 1.07, 0.0, 0.0, 1.0, 0.0, 2
 
@@ -93,7 +94,6 @@ PART
 			rate = 3.5
 		}
 	}
-
 	MODULE
 	{
 		name = ModuleGimbal
@@ -105,7 +105,6 @@ PART
 		gimbalRangeYN = 10.5
 		gimbalRangeYP = 10.5
 	}
-
     MODULE
 	{
 		name = ModuleSurfaceFX
@@ -378,6 +377,19 @@ PART
             node=top01
             node=bottom
             attachNode =  0.0, 1.45, 0.0, 0.0, 1.0, 0.0
+		}
+        SUBTYPE
+		{
+			name = STS Mount
+            primaryColor=#b0aeac
+			secondaryColor=#2b2b2b
+            transform = sts-mount
+            defaultSubtypePriority = 0
+            descriptionSummary = Shuttle Stack Mount
+            descriptionDetail = For attaching engines to the Space Transportation System Earth Orbit Shuttle.
+            node=sts
+            node=bottom
+            attachNode =  0.0, 0.263, 0.0, 0.0, 1.0, 0.0
 		}
 	}
     MODULE
