--- a/GameData/RocketMotorMenagerie/Parts/rmm_cotopaxi.cfg
+++ b/GameData/RocketMotorMenagerie/Parts/rmm_cotopaxi.cfg
@@ -355,7 +355,7 @@ PART
             transform = sts-mount
             defaultSubtypePriority = 0
             descriptionSummary = Shuttle Stack Mount
-            descriptionDetail = For attaching SSMEs to the Space Transportation System Earth Orbit Shuttle.
+            descriptionDetail = For attaching engines to the Space Transportation System Earth Orbit Shuttle.
             node=sts
             node=bottom
             attachNode =  0.0, 0.263, 0.0, 0.0, 1.0, 0.0
@@ -380,7 +380,6 @@ PART
 				{
 					name = ModuleEnginesFX
 				}
-
 				DATA
 				{
 					maxThrust = 522
