--- a/GameData/RocketMotorMenagerie/Parts/rmm_dugong.cfg
+++ b/GameData/RocketMotorMenagerie/Parts/rmm_dugong.cfg
@@ -15,6 +15,7 @@ PART
     
     node_stack_top00 = 0.0, 1.07, 0.0, 0.0, 1.0, 0.0, 2
     node_stack_top01 = 0.0, 1.45, 0.0, 0.0, 1.0, 0.0, 2
+    node_stack_sts = 0.0, 0.263, 0.0, 0.0, 1.0, 0.0, 2    
     node_stack_bottom = 0.0, -1.4, 0.0, 0.0, -1.0, 0.0, 2
     node_attach = 0.0, 1.07, 0.0, 0.0, 1.0, 0.0, 2
 
@@ -335,5 +336,18 @@ PART
             node=bottom
             attachNode =  0.0, 1.45, 0.0, 0.0, 1.0, 0.0
 		}
+        SUBTYPE
+		{
+			name = STS Mount
+            primaryColor=#b0aeac
+			secondaryColor=#2b2b2b
+            transform = sts-mount
+            defaultSubtypePriority = 0
+            descriptionSummary = Shuttle Stack Mount
+            descriptionDetail = For attaching engines to the Space Transportation System Earth Orbit Shuttle.
+            node=sts
+            node=bottom
+            attachNode =  0.0, 0.263, 0.0, 0.0, 1.0, 0.0
+		}z
 	}
 }
