--- a/GameData/RocketMotorMenagerie/Parts/rmm_arenysaurus.cfg
+++ b/GameData/RocketMotorMenagerie/Parts/rmm_arenysaurus.cfg
@@ -360,5 +360,19 @@ PART
             node=bottom
             attachNode =  0.0, 0.263, 0.0, 0.0, 1.0, 0.0
 		}
+        SUBTYPE
+		{
+			name = SDLV Mount
+            primaryColor=#c7c7c7
+			secondaryColor=#b1773c
+            transform = 1875attach
+            transform = sls-mount
+            defaultSubtypePriority = 0
+            descriptionSummary = SDLV Engine Mount
+            descriptionDetail = Used for attaching engines to Inline Shuttle Derived Vehicles.
+            node=top01
+            node=bottom
+            attachNode =  0.0, 1.45, 0.0, 0.0, 1.0, 0.0
+		}
 	}
 }
