--- a/GameData/RocketMotorMenagerie/Parts/rmm_dugong.cfg
+++ b/GameData/RocketMotorMenagerie/Parts/rmm_dugong.cfg
@@ -29,7 +29,7 @@ PART
 
     category     = Propulsion
     subcategory  = 0
-    title        = RM-S3S-35 'Dugong' Cryogenic Rocket Engine
+    title        = RM-S3S-35 'Dugong' Liquid Fuel Engine
     manufacturer = Cassiopeia Propulsion Systems
     description  = The 'Dugong' is the result of modifying a 'Cotopaxi' to use Liquid Fuel and then sticking a 1:35 expansion nozzle on the flamey end. (Yeah, you read that right.) It can be used on liquid rocket boosters or on dual-mode SSTOs, where it can provide high thrust early in flight. It was hard to fit the new coolant and Liquid Fuel turbopumps onto the engine, so it can only gimble in one plane. Best used in clusters.
 
