vector scale RMM

--- a/GameData/RocketMotorMenagerie/Parts/rmm_cotopaxi.cfg
+++ b/GameData/RocketMotorMenagerie/Parts/rmm_cotopaxi.cfg
@@ -31,7 +31,7 @@ PART
     subcategory  = 0
     title        = RM-25-69 'Cotopaxi' Cryogenic Rocket Engine
     manufacturer = Cassiopeia Propulsion Systems
-    description  = One of the most incredibly iconic and popular engines in the business, the 'Cotopaxi' is a capable sustainer engine. 
+    description  = After years of trials and tribulations, the 'Cotopaxi' is ready to fly as part of a grander vision to make space affordable and accessible, and power Kerbal Kind towards a future in the stars. Derived from previous work on hydrolox engines, this beast is a modern take on some of the most iconic powerhouses of space exploration. Combining efficient hydrolox fuels, a stellar gimbal range and advanced tooling and machinery, this powerful engine will have a place among the greats of rocketry.
 
     tags = propuls rocket sustain hydrogen hydrolox cryo rs25 ssme transportation rm? menagerie cassiopeia ?25 shuttle sts 69 cass
 
